Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: url("../images/sloth-bg.svg") 48px repeat #bea586;
+  background: url("../images/sloth-bg.svg") left top 48px repeat #bea586;
 }
 
 main {
@@ -16,15 +16,15 @@ figcaption {
 }
 
 .banner-content {
-  top: .1em;
+  top: .18em;
   color: #fff;
-  text-shadow: .1em .1em .1em rgba(28, 14, 0, .8);
+  text-shadow: .15em .15em rgba(28, 14, 0, .8);
   background-image: linear-gradient(to bottom, rgba(28, 14, 0, .8), rgba(28, 14, 0, 0));
 }
 
 .borders {
-  border-top: 2px solid rgba(28, 14, 0, .5);
-  border-bottom: 2px solid rgba(28, 14, 0, .5);
+  border-top: 2px solid rgba(28, 14, 0, .6);
+  border-bottom: 2px solid rgba(28, 14, 0, .6);
 }
 
 .link {
